--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,42 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+        <title>QR code generator</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    </head>
+    <body class="bg-primary">
+        <div class = "content bg-white p-5 text-center mx-auto mt-3 mb-1">
+            <a href="{{ url_for('main_app.index') }}"><img src="./static/logo.png" style="width: 150px" class="mx-auto d-block"></a>
 
-{% block title %}Hello World!{% endblock %}
+            <h1>QR code generator</h1>
+            <div class="text-start">
+                <p>This is a simple QR code generator. Enter the URL you want to encode and click the button to generate the QR code.</p>
+                <form method="post">
+                    <label for="url" class="form-label">Enter URL:</label>
+                    <input type="text" class="form-control" id="url" name="url" placeholder="Enter URL">
+                    <br>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary">Generate QR code</button>
+                    </div>
+                </form>
+            </div>
 
-{% block content %}
-<img src="./static/logo.png" style="width: 300px" class="align-center">
+            <div class="p-5">
+                <img src="{{ qrcode(url_link) }}">
+            </div>
 
-<h1 class="roboto-bold">Hello World!</h1>
-<p>
-    Welcome to this template page. This website is an example of how website can be build with Flask. Use menu in top to see how it works.
-    <br>
-    Make sure that you installed all requirements before start.
-</p>
-{% endblock %}
+            <div class="text-start">
+                <h2>Last genereted codes:</h2>
+                <div class="list-group">
+                {% for last_url in recent_values %}
+                    <a href="#" class="list-group-item list-group-item-action">{{ last_url }}</a>
+                {% endfor %}
+                </div>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    </body>
+</html>
